# sx1276-rs

./: .gitignore  Cargo.toml  README.md  link.x
embedded-hal-bindings/: Cargo.toml  build.rs  cbindgen.toml
embedded-hal-bindings/src/: lib.rs
examples/stm32l0x2/: main.rs
src/: lib.rs  sx1276.rs
sx1276/: Cargo.toml
sx1276-sys/: Cargo.toml  Makefile  README.md  board.h  build.rs  helium.c  helium.h  heliumP.h  longfi_tests
sx1276-sys/conf/: config.h  hal_spi.h  pinName-board.h  pinName-ioe.h  spi-board.h  stm32l0xx_hal_spi.h
sx1276-sys/radio/: sx1276-board.h
sx1276-sys/radio/sx1276/: sx1276.c
sx1276-sys/tests/: LongFiSuite.cpp
sx1276/src/: lib.rs
