[package]
name = "sx1276"
version = "0.1.3"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[package.metadata.docs.rs]
features = ["stm32l0x2", "rt"]

[dependencies]
sx1276-sys = {path = "./sx1276-sys"}

[[example]]
name = "stm32l0x2"

[dev-dependencies]
embedded-hal = { version = "0.2.2", features = ["unproven"] }
cortex-m = {version = "0.5.8", features = ["const-fn"] }
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.3"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.2", default-features = false }
nb = "0.1.2"
panic-semihosting       = "0.5.2"
panic-halt = "0.2.0"


[dev-dependencies.stm32l0xx-hal]
git                     = "https://github.com/lthiery/stm32l0xx-hal.git"
branch					= "master"
version					= "0.1.3"
features                = ["stm32l0x2","rt"]