[package]
name = "sx1276-sys"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
bindgen = "0.49.0"

[dependencies]
libc =  { version = "0.2", default-features = false }
embedded-hal-bindings = {path = "../embedded-hal-bindings"}

